[package]
name = "wetter"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.4.4"
flate2 = "1.0.33"
flume = "0.11.0"
libc = "0.2.158"
reqwest = { version = "0.12.7", features = ["blocking"] }
tar = "0.4.41"
tempfile = "3.12.0"
tokio = {version = "1.40.0", features = ["full"] }
tokio-process = "0.2.5"
xz2 = "0.1.7"
